[package]
name = "ech-grpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.21"
boring = "5.1.0"
bytes = "1"
clap = { version = "=4.4.18", features = ["derive"] }
futures-util = "0.3"
http = "0.2"
hyper = "0.14"
ipnet = "2"
prost = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots"] }
rustls-native-certs = "0.6"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-boring = "5.0.0"
tokio-stream = "0.1"
toml = "0.8"
tonic = { version = "0.10", features = ["transport", "tls-roots"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.10"
