[package]
name = "ech-grpc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "=4.4.18", features = ["derive"] }
futures-core = "0.3"
futures-util = "0.3"
http = "0.2"
ipnet = "2"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tonic = { version = "0.10", features = ["transport", "tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.10"
